--- a/src/api/views/qrcode.ejs
+++ b/src/api/views/qrcode.ejs
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1> Scan Code Below Using WhatsApp App<h1>
+    <h1>Leia o QrCode abaixo com seu WhatsApp para conectar ativar o serviço:<h1>
             <div class="container">
                 <img src="<%= qrcode %>" alt="" id="qrcode_box" />
             </div>
